# libuv-backend

./: .gitignore  CMakeLists.txt  Makefile  app.hcl  app.yml  build.zig  build.zig.zon  expr.g4  main  main.cpp  main.py  main.zig  output.yml  readme.md  step-by-step-construction.md
.antlr/: YourLanguageLexer.interp  YourLanguageLexer.java  YourLanguageLexer.tokens  malech.interp  malech.tokens  malechLexer.interp  malechLexer.java  malechParser.java  nostalgiaLexer.interp  nostalgiaLexer.java  nostalgiaLexer.tokens
apps/Luma/tree-sitter-luma/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  compile-python.sh  example-file.luma  go.mod  grammar-bkp.js  grammar.js  log.html  luma.py  package.json  pyproject.toml  setup.py  tree-sitter.json
apps/Luma/tree-sitter-luma/bindings/c/: tree-sitter-luma.h  tree-sitter-luma.pc.in
apps/Luma/tree-sitter-luma/bindings/go/: binding.go  binding_test.go
apps/Luma/tree-sitter-luma/bindings/node/: binding.cc  index.js
apps/Luma/tree-sitter-luma/bindings/python/tests/: test_binding.py
apps/Luma/tree-sitter-luma/bindings/python/tree_sitter_luma/: __init__.py  binding.c
apps/Luma/tree-sitter-luma/bindings/rust/: build.rs  lib.rs
apps/Luma/tree-sitter-luma/bindings/swift/TreeSitterLumaTests/: TreeSitterLumaTests.swift
apps/Luma/tree-sitter-luma/src/: grammar.json  node-types.json  parser.c
code/: app.nix  app.toml  lrucache.go  lrucache.ts
docs/: m1.txt  my_libuv_backend_cpp  readme.md  tests.md
examples/: binary-operations.txt  core-funcionalities 3.md  core-funcionalities 5.md  luna-old.g4  luna.g4  (+17 more)
(+139 files in other folders)
