[package]
name = "tree-sitter-luma"
description = "This is a luma tester"
version = "0.1.0"
authors = ["Henrique Mauler <henriquemauler@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "luma"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-luma"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
